--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
     }
   </style>
-  <body style:"background-color: #c1e8eb;">
+  <body style="background-color: #c1e8eb;">
     <table cellspacing="1">
       <tr>
 
