--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Hardik's Personal site</title>
   </head>
   <style>
+    body{
+      background-color: #c1e8eb;
+    }
     img {
       height: 50%;
       width: 50%;
@@ -25,7 +28,7 @@
   
     }
   </style>
-  <body style="background-color: #c1e8eb;">
+  <body >
     <table cellspacing="1">
       <tr>
 
